--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -704,7 +704,7 @@ sc4evermore/36-lk33-seasonalflorapatch:
 
 sc4evermore/39-bsc-census-repository-building-by-ripplejet:
   packageId: ripplejet/census-repository-building
-  variantId: default
+  variantId: default,more-demand-info
 
 sc4evermore/4-sc4d-lex-legacy-jmyers-homes-pack:
   packageId: jmyers2043/homes-pack
