--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -23003,7 +23003,7 @@ assets:
     authors:
       - justforfun
     category: 101-residential
-    lastModified: 2024-10-19T09:29:18.000Z
+    lastModified: 2024-11-29T17:23:48.000Z
     name: Townhouses Pack 01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_10/ensemble1.thumb.jpg.06c06812d19d06ec342d142b8fd9f06d.jpg
     url: https://community.simtropolis.com/files/file/36513-townhouses-pack-01/
@@ -23683,6 +23683,41 @@ assets:
     name: Apartments 2
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/6744c689214f5_Day1.thumb.jpg.f4b60e884037f07f4aad825f676d7d4f.jpg
     url: https://community.simtropolis.com/files/file/36570-apartments-2/
+  simtropolis/36575:
+    assetId: simtropolis/36575-apartments-3
+    category: 101-residential
+    lastModified: 2024-12-01T20:18:56.000Z
+    name: Apartments 3
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/674cc4afcf190_day1.thumb.jpg.a0c58b6548dba9686d8736395ea9c8ce.jpg
+    url: https://community.simtropolis.com/files/file/36575-apartments-3/
+  simtropolis/36576:
+    assetId: simtropolis/36576-tulum-homes
+    category: 101-residential
+    lastModified: 2024-12-03T17:30:30.000Z
+    name: Tulum Homes
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/674f4036b208e_TulumDay.thumb.jpg.69bd6278b0a0caedba9e30b409ebad3f.jpg
+    url: https://community.simtropolis.com/files/file/36576-tulum-homes/
+  simtropolis/36579:
+    assetId: simtropolis/36579-skycliffe-tower
+    category: 101-residential
+    lastModified: 2024-12-05T03:44:31.000Z
+    name: Skycliffe Tower
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/6751219f350ab_SkycliffeTower00.thumb.jpg.d68fb61857b5ea6290396a16ed04b3e7.jpg
+    url: https://community.simtropolis.com/files/file/36579-skycliffe-tower/
+  simtropolis/36580:
+    assetId: simtropolis/36580-otautahi-mews
+    category: 101-residential
+    lastModified: 2024-12-05T04:06:43.000Z
+    name: Otautahi Mews
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/675126d35bb79_OtautahiMews00.thumb.jpg.13b58f5832299fd7aef8b984c82a7ade.jpg
+    url: https://community.simtropolis.com/files/file/36580-otautahi-mews/
+  simtropolis/36581:
+    assetId: simtropolis/36581-newport-house
+    category: 101-residential
+    lastModified: 2024-12-05T04:10:52.000Z
+    name: Newport House
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/NewportHouse00.thumb.jpg.5ba159c59cb236600eca69863df8c581.jpg
+    url: https://community.simtropolis.com/files/file/36581-newport-house/
   simtropolis/3663:
     assetId: simtropolis/3663-modern-row-houses-set
     authors:
@@ -25035,4 +25070,4 @@ assets:
     url: https://community.simtropolis.com/files/file/992-small-bb-the-greeley-house/
 
 meta:
-  timestamp: 2024-11-26T16:10:02.088Z
+  timestamp: 2024-12-09T08:56:27.588Z
