--- a/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
+++ b/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
@@ -21243,6 +21243,20 @@ assets:
     name: Harold Building
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/6742fd8b2b5eb_HaroldBuilding(1).thumb.png.ed28e736a84cf038e5fca22496f0a81c.png
     url: https://community.simtropolis.com/files/file/36569-harold-building/
+  simtropolis/36572:
+    assetId: simtropolis/36572-clatsop-heritage-museum
+    category: 106-civic-non-rci
+    lastModified: 2024-11-26T21:59:38.000Z
+    name: Clatsop Heritage Museum
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/674644ca29d18_Mus1.thumb.jpg.d70f84f8745c4dcb37acaede713851bc.jpg
+    url: https://community.simtropolis.com/files/file/36572-clatsop-heritage-museum/
+  simtropolis/36577:
+    assetId: simtropolis/36577-stave-church
+    category: 106-civic-non-rci
+    lastModified: 2024-12-04T11:34:57.000Z
+    name: Stave church
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/Screenshot_Stave_church.thumb.JPG.7b9e7ea13dcab70234cf93b6b6b091e6.JPG
+    url: https://community.simtropolis.com/files/file/36577-stave-church/
   simtropolis/3661:
     assetId: simtropolis/3661-eiffel-tower-v11-by-aothe
     authors:
@@ -23438,4 +23452,4 @@ assets:
     url: https://community.simtropolis.com/files/file/997-government-complex/
 
 meta:
-  timestamp: 2024-11-26T16:10:02.088Z
+  timestamp: 2024-12-09T08:56:27.588Z
