--- a/src/scripts/data/assets/simtropolis/107-utilities.yaml
+++ b/src/scripts/data/assets/simtropolis/107-utilities.yaml
@@ -5060,6 +5060,13 @@ assets:
     name: Hydroelectric Power Plant
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/6738c07a5af32_Canton-Nov.6191731745570.thumb.png.7171faaa2b1a925e3bd132d944d5b75b.png
     url: https://community.simtropolis.com/files/file/36562-hydroelectric-power-plant/
+  simtropolis/36578:
+    assetId: simtropolis/36578-vintage-sign-prop-pack
+    category: 107-utilities
+    lastModified: 2024-12-04T18:48:52.000Z
+    name: Vintage Sign Prop Pack
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/Night.thumb.png.733e22560d67ae35f91b05967651c932.png
+    url: https://community.simtropolis.com/files/file/36578-vintage-sign-prop-pack/
   simtropolis/3681:
     assetId: simtropolis/3681-obras-sanitarias-sanitary-works
     authors:
@@ -5653,4 +5660,4 @@ assets:
     url: https://community.simtropolis.com/files/file/983-hydro-electric-dam/
 
 meta:
-  timestamp: 2024-11-26T16:10:02.088Z
+  timestamp: 2024-12-09T08:56:27.588Z
