--- a/src/scripts/data/assets/simtropolis/110-transportation.yaml
+++ b/src/scripts/data/assets/simtropolis/110-transportation.yaml
@@ -17398,6 +17398,13 @@ assets:
     name: SC4 Viipuri relot
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/673d6b869784f_NewCity-Apr.1001732076985.thumb.jpg.67540a9a8f7c702ea262d11aac2ec45c.jpg
     url: https://community.simtropolis.com/files/file/36566-sc4-viipuri-relot/
+  simtropolis/36573:
+    assetId: simtropolis/36573-esa-skelleftea-station
+    category: 110-transportation
+    lastModified: 2024-11-27T19:48:09.000Z
+    name: ESA Skelleftea station
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/67477779a3a93_Norra-Jul.11191732725155.thumb.jpg.fbc56ceea06b8a0843aa88bed631f26e.jpg
+    url: https://community.simtropolis.com/files/file/36573-esa-skelleftea-station/
   simtropolis/3669:
     assetId: simtropolis/3669-passenger-rail-stations-4tracks
     authors:
@@ -18444,4 +18451,4 @@ assets:
     url: https://community.simtropolis.com/files/file/999-bus-stop-with-allotments/
 
 meta:
-  timestamp: 2024-11-26T16:10:02.088Z
+  timestamp: 2024-12-09T08:56:27.588Z
