--- a/src/scripts/data/assets/simtropolis/118-dependencies.yaml
+++ b/src/scripts/data/assets/simtropolis/118-dependencies.yaml
@@ -13599,13 +13599,13 @@ assets:
         31083bf0:
           name: Orange_Aesculus_C_Fall
         42fd5a58:
-          model: 5ad0e817-fbd1643f-00030000
+          model: fbd1643f
           name: Orange_Aesculus_C_Evergreen
         4ad90df2:
-          model: 5ad0e817-dbd15dd3-00030000
+          model: dbd15dd3
           name: Orange_Aesculus_B_Evergreen
         4d36549a:
-          model: 5ad0e817-fbd07936-00030000
+          model: fbd07936
           name: Orange_Aesculus_D_Evergreen
         56b3847b:
           name: Orange_Aesculus_D_Winter
@@ -13622,12 +13622,12 @@ assets:
         7e89319a:
           name: Orange_Aesculus_C_Winter
         '87570384':
-          model: 5ad0e817-7bd15486-00030000
+          model: 7bd15486
           name: Orange_Aesculus_A_Evergreen
         9020633f:
           name: Orange_Aesculus_E_Fall
         96a707d5:
-          model: 5ad0e817-bbd11d02-00030000
+          model: bbd11d02
           name: Orange_Aesculus_F_Evergreen
         989fbc98:
           name: Orange_Aesculus_B_Summer
@@ -13636,7 +13636,7 @@ assets:
         ae582c0a:
           name: Orange_Aesculus_E_Summer
         c05bcebc:
-          model: 5ad0e817-bbd0f803-00030000
+          model: bbd0f803
           name: Orange_Aesculus_E_Evergreen
         c06b8c7b:
           name: Orange_Aesculus_F_Winter
@@ -13656,22 +13656,22 @@ assets:
         2676c11a:
           name: Orange_Fagus_C_Winter
         3010fee6:
-          model: 5ad0e817-1bd914e7-00030000
+          model: 1bd914e7
           name: Orange_Fagus_C_Evergreen
         32be80f4:
           name: Orange_Fagus_E_Winter
         3419023c:
-          model: 5ad0e817-5bd95aea-00030000
+          model: 5bd95aea
           name: Orange_Fagus_A_Evergreen
         4bd91623:
           name: Orange_Fagus_A_Summer
         839f3f5f:
-          model: 5ad0e817-fbd9521d-00030000
+          model: fbd9521d
           name: Orange_Fagus_B_Evergreen
         847f682f:
           name: Orange_Fagus_D_Summer
         86fcc11a:
-          model: 5ad0e817-7bd85213-00030000
+          model: 7bd85213
           name: Orange_Fagus_E_Evergreen
         8b0104bf:
           name: Orange_Fagus_B_Summer
@@ -13680,7 +13680,7 @@ assets:
         9dce103f:
           name: Orange_Fagus_E_Fall
         a490f7e2:
-          model: 5ad0e817-1bd8643a-00030000
+          model: 1bd8643a
           name: Orange_Fagus_D_Evergreen
         ad915296:
           name: Orange_Fagus_A_Winter
@@ -13694,19 +13694,19 @@ assets:
           name: Orange_Fagus_C_Summer
       Orange_PinusNigra.dat:
         1ac8e9ec:
-          model: 5ad0e817-1a4ba992-00030000
+          model: 1a4ba992
           name: Or_TSC_FL_PinusNigra01
         7ac97662:
-          model: 5ad0e817-3a4c2724-00030000
+          model: 3a4c2724
           name: Or_TSC_FL_PinusNigra03
         bac8ed81:
-          model: 5ad0e817-ba4bacc6-00030000
+          model: ba4bacc6
           name: Or_TSC_FL_PinusNigra02
         bac97696:
-          model: 5ad0e817-1a4c355d-00030000
+          model: 1a4c355d
           name: Or_TSC_FL_PinusNigra05
         dac97670:
-          model: 5ad0e817-9a4c327e-00030000
+          model: 9a4c327e
           name: Or_TSC_FL_PinusNigra04
       VIPTrees_Props.dat:
         '02516558':
@@ -13734,16 +13734,16 @@ assets:
         3c3aef64:
           name: VIP_Tree2 Fall
         4627b061:
-          model: 5ad0e817-f8c74a82-00030000
+          model: f8c74a82
           name: VIP_Tree1 Evergreen
         55fc9759:
-          model: 5ad0e817-59734b07-00030000
+          model: 59734b07
           name: VIP_Tree5 Evergreen
         5c99c2ad:
-          model: 5ad0e817-79787d84-00030000
+          model: 79787d84
           name: VIP_Tree6 Evergreen
         '67176245':
-          model: 5ad0e817-5978136f-00030000
+          model: 5978136f
           name: VIP_Tree2 Evergreen
         6e44eb24:
           name: VIP_Tree4 Summer
@@ -13760,10 +13760,10 @@ assets:
         87f25b8d:
           name: VIP_Tree4 Winter
         901b317a:
-          model: 5ad0e817-99794909-00030000
+          model: '99794909'
           name: VIP_Tree3 Evergreen
         9291bc7c:
-          model: 5ad0e817-5978136f-00030000
+          model: 5978136f
           name: VIP_Cherry Evergreen
         946861d1:
           name: VIP_Tree1 Fall
@@ -13772,12 +13772,12 @@ assets:
         c8cb5586:
           name: VIP_Cherry Winter
         d3edfff3:
-          model: 5ad0e817-f975baa0-00030000
+          model: f975baa0
           name: VIP_Tree7 Evergreen
         d59813c7:
           name: VIP_Tree7 Fall
         f8445f57:
-          model: 5ad0e817-fa1be3be-00030000
+          model: fa1be3be
           name: VIP_Tree4 Evergreen
         ff7cf43a:
           name: VIP_Tree1 Winter
