--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -23730,6 +23730,15 @@ assets:
     name: Newport House
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/NewportHouse00.thumb.jpg.5ba159c59cb236600eca69863df8c581.jpg
     url: https://community.simtropolis.com/files/file/36581-newport-house/
+  simtropolis/36593:
+    assetId: simtropolis/36593-basildon-terraces
+    authors:
+      - Jasoncw
+    category: 101-residential
+    lastModified: 2024-12-12T05:46:27.000Z
+    name: Basildon Terraces
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/675a78b3453b3_BasildonTerrace00.thumb.jpg.c6aa443be8fd867b9e5f7a408ec5b8fe.jpg
+    url: https://community.simtropolis.com/files/file/36593-basildon-terraces/
   simtropolis/3663:
     assetId: simtropolis/3663-modern-row-houses-set
     authors:
@@ -24767,4 +24776,4 @@ assets:
     url: https://community.simtropolis.com/files/file/992-small-bb-the-greeley-house/
 
 meta:
-  timestamp: 2024-12-10T10:25:09.262Z
+  timestamp: 2024-12-12T12:47:22.557Z
