--- a/src/scripts/data/assets/maxis.yaml
+++ b/src/scripts/data/assets/maxis.yaml
@@ -51097,3 +51097,280 @@ props:
       name: Effect_large_crane
     ea9c4a1a:
       name: Effect_windmill
+
+textures:
+  SimCity_2.dat:
+    - '26220004'
+    - 25c60004
+    - 261f0004
+    - 25c40004
+    - 25c30004
+    - 261c0004
+    - 25c00004
+    - '26190004'
+    - 25bd0004
+    - '26160004'
+    - 25ba0004
+    - '26130004'
+    - 25b70004
+    - '26100004'
+    - 25b40004
+    - 260d0004
+    - 260a0004
+    - '26070004'
+    - 25a00004
+    - 25f80004
+    - 259d0004
+    - '25420004'
+    - 25f50004
+    - '25400004'
+    - 259a0004
+    - 253d0004
+    - '25970004'
+    - 25ef0004
+    - 253a0004
+    - '25940004'
+    - 25ec0004
+    - '25910004'
+    - '25900004'
+    - '25e90004'
+    - '25340004'
+    - '258e0004'
+    - 258d0004
+    - '25e60004'
+    - 258b0004
+    - '25e30004'
+    - '25e00004'
+    - 252b0004
+    - '26350004'
+    - 252b0104
+    - 25da0004
+    - '25250004'
+    - '26320004'
+    - 25d70004
+    - 262f0004
+    - 25d40004
+    - 251f0004
+    - '25780004'
+    - 25d10004
+    - 251c0004
+    - '25750004'
+    - '26290004'
+    - 25ce0004
+    - '25720004'
+    - '26260004'
+    - 251c0104
+    - 25cb0004
+    - '00000009'
+    - 256f0004
+    - 25c80004
+    - 256c0004
+    - '26200004'
+    - '25690004'
+    - 0b9f0004
+    - '25660004'
+    - '25630004'
+    - 25b10004
+    - 25ae0004
+    - 25ab0004
+    - 25a80004
+    - 25a50004
+    - 25a20004
+    - 25fb0004
+    - 25fb0104
+    - 253f0004
+    - '1e880004'
+    - '1e850004'
+    - '25390004'
+    - '1e820004'
+    - 1e7f0004
+    - '25330004'
+    - '25890004'
+    - 263d0004
+    - '25860004'
+    - 263a0004
+    - '25830004'
+    - '25280004'
+    - '26370004'
+    - '25270004'
+    - '25800004'
+    - 257d0004
+    - '25220004'
+    - '25270104'
+    - 257a0004
+    - '26280004'
+    - '26250004'
+    - '00000004'
+    - '00000104'
+    - 25c20004
+    - 261b0004
+    - '00000204'
+    - 25bf0004
+    - '26180004'
+    - 25bc0004
+    - '26150004'
+    - '00000304'
+    - 25b90004
+    - '26120004'
+    - 25b60004
+    - 260f0004
+    - '00000404'
+    - 25b30004
+    - 260c0004
+    - '26090004'
+    - '00000504'
+    - '26060004'
+    - '00000604'
+    - '00000704'
+    - 09bee104
+    - 25fa0004
+    - 259f0004
+    - '00000804'
+    - 25f70004
+    - 259c0004
+    - 09bee204
+    - 25f40004
+    - '25990004'
+    - '00000904'
+    - 25f10004
+    - '25960004'
+    - 25ee0004
+    - '25930004'
+    - 25eb0004
+    - '25e80004'
+    - '25e50004'
+    - '25e20004'
+    - 252a0004
+    - 25dc0004
+    - '26340004'
+    - 25d90004
+    - '25240004'
+    - '26310004'
+    - 25d60004
+    - '262e0004'
+    - 25d30004
+    - '251e0004'
+    - '25770004'
+    - 25d00004
+    - 251b0004
+    - '25740004'
+    - 25cd0004
+    - '26270004'
+    - '25710004'
+    - 25ca0004
+    - '26240004'
+    - '256e0004'
+    - 25c70004
+    - 256b0004
+    - 25c50004
+    - '25680004'
+    - 0b9e0004
+    - '25650004'
+    - '25620004'
+    - 25b00004
+    - 25ad0004
+    - 25aa0004
+    - 25a70004
+    - 25a40004
+    - '253e0004'
+    - '1e870004'
+    - 253c0004
+    - '1e840004'
+    - '25380004'
+    - '1e810004'
+    - 258f0004
+    - 1e7e0004
+    - 258c0004
+    - '25300004'
+    - 263f0004
+    - '25880004'
+    - 252d0004
+    - 263c0004
+    - '25850004'
+    - '26390004'
+    - '25290004'
+    - '25820004'
+    - '26360004'
+    - 257f0004
+    - '25230004'
+    - 257c0004
+    - '25210004'
+    - a990c104
+    - '26230004'
+    - a990c204
+    - '261e0004'
+    - a990c304
+    - 261d0004
+    - 25c10004
+    - 261a0004
+    - 25be0004
+    - a990c404
+    - '26170004'
+    - 25bb0004
+    - '26140004'
+    - 25b80004
+    - '26110004'
+    - 25b50004
+    - '260e0004'
+    - 260b0004
+    - '26080004'
+    - 25fc0004
+    - 25a10004
+    - 25f90004
+    - '259e0004'
+    - 25f60004
+    - '25410004'
+    - 259b0004
+    - '25980004'
+    - 25f00004
+    - '25950004'
+    - 25ed0004
+    - '25920004'
+    - 25ea0004
+    - '25350004'
+    - '25e70004'
+    - '25e40004'
+    - 252f0004
+    - '25e10004'
+    - 25db0004
+    - '25260004'
+    - '26330004'
+    - 25d80004
+    - '26300004'
+    - 25d50004
+    - 25d20004
+    - '25760004'
+    - 25cf0004
+    - '25730004'
+    - 25cc0004
+    - '25700004'
+    - 25c90004
+    - 256d0004
+    - '26210004'
+    - 256a0004
+    - 0ba00004
+    - '25670004'
+    - 0b9d0004
+    - '25640004'
+    - '25610004'
+    - 25b20004
+    - 25af0004
+    - 25ac0004
+    - 25a90004
+    - 25a60004
+    - 25a30004
+    - '1e860004'
+    - 253b0004
+    - '1e830004'
+    - '25370004'
+    - '1e800004'
+    - '25310004'
+    - 258a0004
+    - '263e0004'
+    - '25870004'
+    - 263b0004
+    - '25840004'
+    - '26380004'
+    - '25810004'
+    - '257e0004'
+    - 257b0004
