--- a/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
+++ b/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
@@ -21257,6 +21257,24 @@ assets:
     name: Stave church
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/Screenshot_Stave_church.thumb.JPG.7b9e7ea13dcab70234cf93b6b6b091e6.JPG
     url: https://community.simtropolis.com/files/file/36577-stave-church/
+  simtropolis/36601:
+    assetId: simtropolis/36601-3x3-park
+    authors:
+      - leonv93
+    category: 106-civic-non-rci
+    lastModified: 2024-12-14T23:26:03.000Z
+    name: 3x3 Park
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/675e140aec5d1_NewCity-Jan.12001734217946.thumb.png.6f5b6252c64f2f84da263505e452e9fb.png
+    url: https://community.simtropolis.com/files/file/36601-3x3-park/
+  simtropolis/36604:
+    assetId: simtropolis/36604-our-lady-of-akita-catholic-school
+    authors:
+      - 20huskies
+    category: 106-civic-non-rci
+    lastModified: 2024-12-15T21:09:00.000Z
+    name: Our Lady of Akita Catholic School
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/675f456a37976_Shikuka-Mar.9011734291363.thumb.png.d0962fd338e15425be1446545edcfcea.png
+    url: https://community.simtropolis.com/files/file/36604-our-lady-of-akita-catholic-school/
   simtropolis/3661:
     assetId: simtropolis/3661-eiffel-tower-v11-by-aothe
     authors:
@@ -23452,4 +23470,4 @@ assets:
     url: https://community.simtropolis.com/files/file/997-government-complex/
 
 meta:
-  timestamp: 2024-12-13T09:40:52.613Z
+  timestamp: 2024-12-16T07:04:42.746Z
